# sudachi-swift

./: .gitignore  .gitmodules  Package.swift  README.md
.github/workflows/: build.yml  check-upstream.yml  release.yml
Examples/BasicUsage/: Package.swift
Examples/BasicUsage/Sources/: main.swift
Examples/iOSApp/: Package.swift
Examples/iOSApp/Sources/: ContentView.swift  SudachiDemoApp.swift
Sources/SudachiSwift/: SudachiSwift.swift
rust/: Cargo.toml
rust/SudachiSwift/: Package.swift
rust/SudachiSwift/Sources/SudachiSwift/: SudachiSwift+Convenience.swift  sudachi_swift.swift
rust/src/: lib.rs
